syntax = "proto3";

package com.example.grpc.auth;
option java_package = "com.example.grpc.auth";
option java_multiple_files = true;

service AuthService {
  rpc login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string accessToken = 1;
  string refreshToken = 2;
}